fixed the graph spacing and time-line spacing issues in activity container

--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -4,7 +4,7 @@
   @include flexLayoutWithGap(column, flex-start, flex-start, 1rem);
   width: 100%;
   height: 100%;
-  margin-top: 1rem;
+  margin-top: 1.3rem;
 
   .sales-container {
     width: 100%;
@@ -145,7 +145,7 @@
     height: 385px;
 
     .cardWrapper {
-      width: 43%;
+      width: 53%;
       height: 91%;
 
       .card-head__header {
@@ -163,7 +163,7 @@
 
     .card-pie-chart-container {
       @include flexLayoutWithGap(column-reverse, center, flex-start, 1rem);
-      width: 50%;
+      width: 40%;
       height: 100%;
 
       .cardWrapper {
@@ -213,20 +213,20 @@
             height: 100px;
 
             .red-line__info {
-              @include flexLayoutWithGap(column, flex-start, flex-start, .1rem);
-              height: 32.5px;
+              @include flexLayoutWithGap(column, flex-start, center, .3rem);
+              height: 34.5px;
               margin-bottom: 1px;
             }
 
             .green-line__info {
-              @include flexLayoutWithGap(column, flex-start, flex-start, .1rem);
-              height: 32.5px;
+              @include flexLayoutWithGap(column, flex-start, center, .3rem);
+              height: 34.5px;
               margin-bottom: 1px;
             }
 
             .blue-line__info {
-              @include flexLayoutWithGap(column, flex-start, flex-start, .1rem);
-              height: 32.5px;
+              @include flexLayoutWithGap(column, flex-start, center, .3rem);
+              height: 34.5px;
               margin-bottom: 1px;
             }
           }
